--- a/src/main/resources/templates/ticket.html
+++ b/src/main/resources/templates/ticket.html
@@ -8,123 +8,112 @@
         crossorigin="anonymous"></script>
 
 <head>
-  <meta charset="UTF-8">
-  <title>Ticket</title>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/index">Index
-        <!--                <fmt:message key="label.mainPage"/>-->
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-              aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/auth/login">Login
-              <!--                            <fmt:message key="button.login"/>-->
+    <meta charset="UTF-8">
+    <title>Ticket</title>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/index">Index
+                <!--                <fmt:message key="label.mainPage"/>-->
             </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page"
-               href="/auth/register">Register
-              <!--                            <fmt:message key="button.registration"/>-->
-            </a>
-          </li>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/auth/login">Login
+                            <!--                            <fmt:message key="button.login"/>-->
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page"
+                           href="/auth/register">Register
+                            <!--                            <fmt:message key="button.registration"/>-->
+                        </a>
+                    </li>
 
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-               data-bs-toggle="dropdown" aria-expanded="false">language
-              <!--                            <fmt:message key="label.language"/>-->
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href=<my:lang value="en"/>En
-                <!--                                <fmt:message key="label.lang.en"/>-->
-                </a></li>
-              <li><a class="dropdown-item" href=<my:lang value="ua"/>Ua
-                <!--                                <fmt:message key="label.lang.ua"/>-->
-                </a></li>
-            </ul>
-          </li>
-        </ul>
-        <form class="nav-item" action="movie">
-          <label for="size">Records
-            <!--                        <fmt:message key="number.records"/>-->
-          </label>
-          <input class="col-2" type="number" min="1" name="size" id="size"
-                 value="${page.size}">
-          <input type="hidden" name="sort" th:value="${sort}">
-          <!--                           value="${not empty page.size ? page.size : '5'}">-->
-          <!--                                        <input type="hidden" name="offset" value="0">-->
-          <button type="submit" class="btn btn-dark mt-2 mb-3">Submit
-            <!--                        <fmt:message key="button.submit"/>-->
-          </button>
-        </form>
-      </div>
-    </div>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">language
+                            <!--                            <fmt:message key="label.language"/>-->
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href=<my:lang value="en"/>En
+                                <!--                                <fmt:message key="label.lang.en"/>-->
+                                </a></li>
+                            <li><a class="dropdown-item" href=<my:lang value="ua"/>Ua
+                                <!--                                <fmt:message key="label.lang.ua"/>-->
+                                </a></li>
+                        </ul>
+                    </li>
+                </ul>
 
-  </nav>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+            </div>
+        </div>
+
+    </nav>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 
 <body>
 <body>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
 <div class="container col-3">
-  <div class="card card mx-auto text-center bg-dark">
-    <div class="card-header mx-auto bg-dark">
-      <span> <img src="https://amar.vote/assets/img/amarVotebd.png" class="w-75" alt="Logo"> </span><br/>
-      <span class="logo_title mt-5"> Receipt </span>
-      <!--            <h1>--><?php //echo $message?><!--</h1>-->
+    <div class="card card mx-auto text-center bg-dark">
+        <div class="card-header mx-auto bg-dark">
+            <span> <img src="https://amar.vote/assets/img/amarVotebd.png" class="w-75" alt="Logo"> </span><br/>
+            <span class="logo_title mt-5"> Receipt </span>
+            <!--            <h1>--><?php //echo $message?><!--</h1>-->
+
+        </div>
+        <div class="card-body">
+
+
+            <div class="group form-group">-->
+                <div class="group-prepend">
+                    <span class="group-text"><i class="fa-solid fa-calendar-days"></i></span>
+                </div>
+                <h3 class="panel-title" th:text="${ticketDto.userName}"></h3>
+                <br>
+
+                <div class="group-prepend">
+                    <span class="group-text"><i class="fa-solid fa-calendar-days"></i></span>
+                </div>
+                <h3 class="panel-title" th:text="${ticketDto.date}"></h3>
+                <br>
+
+                <br>
+                <div class="group-prepend">
+                    <span class="group-text"><i class="fa-solid fa-time"></i></span>
+                </div>
+                <h3 class="panel-title" th:text="${ticketDto.time}"></h3>
+                <br>
+
+                <br>
+                <div class="group-prepend">
+                    <span class="group-text"><i class="fa-solid fa-text"></i></span>
+                </div>
+                <h3 class="panel-title" th:text="${ticketDto.movieName}"></h3>
+                <br>
+                <br>
+                <div class="group-prepend">
+                    <span class="group-text"><i class="fa-solid fa-text"></i></span>
+                </div>
+                <h3 class="panel-title" th:text="${ticketDto.seats}"></h3>
+                <br>
+            </div>
+            <div class="group-prepend">
+                <span class="group-text"><i class="fa-solid fa-text"></i></span>
+            </div>
+            <h3 class="panel-title" th:text="${ticketDto.account}"></h3>
+            <br>
+        </div>
+
 
     </div>
-    <div class="card-body">
-
-
-        <div class="group form-group">-->
-          <div class="group-prepend">
-            <span class="group-text"><i class="fa-solid fa-calendar-days"></i></span>
-          </div>
-          <h3 class="panel-title" th:text="${ticketDto.userName}"></h3>
-          <br>
-
-          <div class="group-prepend">
-            <span class="group-text"><i class="fa-solid fa-calendar-days"></i></span>
-          </div>
-          <h3 class="panel-title" th:text="${ticketDto.date}"></h3>
-          <br>
-
-          <br>
-          <div class="group-prepend">
-            <span class="group-text"><i class="fa-solid fa-time"></i></span>
-          </div>
-          <h3 class="panel-title" th:text="${ticketDto.time}"></h3>
-          <br>
-
-          <br>
-          <div class="group-prepend">
-            <span class="group-text"><i class="fa-solid fa-text"></i></span>
-          </div>
-          <h3 class="panel-title" th:text="${ticketDto.movieName}"></h3>
-          <br>
-          <br>
-          <div class="group-prepend">
-            <span class="group-text"><i class="fa-solid fa-text"></i></span>
-          </div>
-          <h3 class="panel-title" th:text="${ticketDto.seats}"></h3>
-          <br>
-
-
-
-          </div>
-
-
-
-
-    </div>
-  </div>
+</div>
 </div>
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 
