add forbidden to edit session

--- a/src/main/resources/templates/admin/schedule-admin.html
+++ b/src/main/resources/templates/admin/schedule-admin.html
@@ -304,8 +304,13 @@
         </ul>
     </li>
 </form>
-
-
+<!--<div th:if="${#fields.hasErrors('global')}">-->
+<!--    <h3>Global errors:</h3>-->
+<!--    <p th:each="err : ${#fields.errors('global')}" th:text="${err}" class="error" />-->
+<!--</div>-->
+<div style="color:red" th:if="${editError}" text="Forbidden for changing">
+    Errors
+</div>
 <div class="container col-11">
     <table class="table table-striped table-responsive-md btn-table table-bordered table-hover">
         <thead class="thead-dark">
